<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user_services"
            android:icon="@drawable/baseline_work_24"
            android:title="@string/menu_user_services" />
    </group>
    <item android:title="@string/menu_account_setting">
        <menu>
            <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/menu_user_profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>