<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_background"
    tools:context=".activities.LoginActivity">
    <ScrollView
        android:id="@+id/svInputData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_above="@+id/llMedSos">
        <LinearLayout
            android:id="@+id/llInputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/login" />
            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/app_name"
                    android:padding="6dp"
                    android:src="@drawable/baseline_email_24" />
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle1"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#757575" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/app_name"
                    android:padding="6dp"
                    android:src="@drawable/baseline_vpn_key_24" />
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#757575" />
            </LinearLayout>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style1"
                android:drawableEnd="@drawable/baseline_send_24"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/tvDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/register"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/llMedSos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green_500"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medsos"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_icons8_linkedin"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_icons8_facebook"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_icons8_twitter"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"/>
</RelativeLayout>